moved the reduce into a more easy to read filter example and need to re-think a less complex reduce example

--- a/lessons/lesson-1-clojure/resources/index.html
+++ b/lessons/lesson-1-clojure/resources/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>home</title>
-   <link rel="stylesheet" type="text/css" href="/level-1-style.css">
+   <link rel="stylesheet" type="text/css" href="/css/level-1-style.css">
 </head>
 <body>
   <!-- TODO: replace this with something that matches your app style -->
 
   <div class="wrapper">
     <h1 class="home">Clojure Sweet Clojure</h1>
-    <img src="/level-1-moose.jpg" />
+    <img src="/imgs/level-1-moose.jpg" />
     <hr />
     <p>
       <a href="/lesson-1">Enter Lesson 1</a>
