--- a/lessons/lesson-1-clojure/resources/lesson-1.html
+++ b/lessons/lesson-1-clojure/resources/lesson-1.html
@@ -53,7 +53,7 @@
   <div>
     <h2 class='home_sub'>Filter</h2>
     <div id="lego-box">
-        <img src="/imgs/plans.jpg" width="200px" />
+        <img src="/imgs/ship.jpg" width="300px" />
     </div>
     <div>
       Who should we send to space?
