update lesson 1 photo replacing the moose with an astronaut

--- a/lessons/lesson-1-clojure/resources/index.html
+++ b/lessons/lesson-1-clojure/resources/index.html
@@ -10,7 +10,7 @@
 
   <div class="wrapper">
     <h1 class="home">Clojure Sweet Clojure</h1>
-    <img src="/imgs/level-1-moose.jpg" />
+    <img src="/imgs/plans.jpg" />
     <hr />
     <p>
       <a href="/lesson-1">Enter Lesson 1</a>
