--- a/lessons/lesson-1-clojure/resources/lesson-1.html
+++ b/lessons/lesson-1-clojure/resources/lesson-1.html
@@ -9,14 +9,15 @@
 <body>
   <!-- TODO: replace this with something that matches your app style -->
 <div class="wrapper">
-  <h1 class='home'>Functional Programming</h1>
-  <p>a common task in programming in manipulating lists.
+  <h1 class='home'>Lesson 1: Map, Filter, Find, Reduce</h1>
+  <p>Manipulating lists is a common task in programming; arguably the most common.
     We can use functions such as map, filter, and reduce to transform existing lists into new lists.
+    The following is a collection of contrived examples that introduce some of fundamentals of Functional Programming.
   </p>
   <p>
-    For instance, in this experiment featuring the
+    For instance, in this experiment featuring some of the
     <a href="https://www.businessinsider.com/lego-women-nasa-scientists-astronauts-kit-2017-10" target="_blank">women of NASA lego set</a>,
-    we transform a list of scientists and prepare them for space flight.
+    we transform a list of scientists and update their agency.
   </p>
 
   <div>
@@ -27,7 +28,7 @@
       <img src="/imgs/cockateil.jpg" width="70px" />
     </div>
     <div>
-      Let's update this list to show that these women work at NASA
+      Let's show that these women have worked at NASA.
     </div>
     <div id="map-results"></div>
     <div>
