--- a/lessons/lesson-1-clojure/resources/index.html
+++ b/lessons/lesson-1-clojure/resources/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>home</title>
    <link rel="stylesheet" type="text/css" href="/css/level-1-style.css">
 </head>
@@ -9,8 +10,8 @@
   <!-- TODO: replace this with something that matches your app style -->
 
   <div class="wrapper">
-    <h1 class="home">Clojure Sweet Clojure</h1>
-    <img src="/imgs/plans.jpg" />
+    <h1 class="home">Learn Clojure</h1>
+    <img src="/imgs/margaret.jpg" width="300px" />
     <hr />
     <p>
       <a href="/lesson-1">Enter Lesson 1</a>
