--- a/lessons/lesson-1-clojure/resources/lakeside-lodge.html
+++ b/lessons/lesson-1-clojure/resources/lakeside-lodge.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>home</title>
    <link rel="stylesheet" type="text/css" href="/level-1-style.css">
 </head>
