--- a/lessons/lesson-2-clojure-postgresql/resources/index.html
+++ b/lessons/lesson-2-clojure-postgresql/resources/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>home</title>
-   <link rel="stylesheet" type="text/css" href="/css/level-1-style.css">
+   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
   <!-- TODO: replace this with something that matches your app style -->
