--- a/lessons/lesson-2-clojure-postgresql/resources/lesson-2.html
+++ b/lessons/lesson-2-clojure-postgresql/resources/lesson-2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>experiments</title>
-   <link rel="stylesheet" type="text/css" href="/css/level-1-style.css">
+   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
